--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -5,6 +5,7 @@
     <string name="app_process" translatable="false">app_process</string>
     <string name="xposedbridge" translatable="false">XposedBridge.jar</string>
     <string name="none" translatable="false">---</string>
+    <string name="support_material_xda" translatable="false">http://forum.xda-developers.com/xposed/material-design-xposed-installer-t3137758</string>
     <string name="support_faq_url" translatable="false">http://forum.xda-developers.com/xposed/xposed-faq-issues-t2735540</string>
     <string name="support_donate_url" translatable="false">http://repo.xposed.info/donate</string>
     <string name="about_source" translatable="false">https://github.com/rovo89</string>
