--- a/app/src/main/res/layout/tab_installer.xml
+++ b/app/src/main/res/layout/tab_installer.xml
@@ -212,43 +212,34 @@
                         android:textStyle="bold"
                         android:visibility="gone"/>
 
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/disableView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/installers_uninstallers"
-                    android:paddingTop="10dp">
-
                     <TextView
                         android:id="@+id/disableTv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/installationForbidden"
+                        android:layout_marginTop="5dp"
                         android:text="@string/disable_xposed"
                         android:textAllCaps="true"
                         android:textStyle="bold"/>
 
                     <Switch
                         android:id="@+id/disableSwitch"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_below="@id/disableTv"
                         android:checked="true"
-                        android:paddingTop="5dp"
+                        android:padding="5dp"
                         android:text="@string/status"
                         android:textSize="16sp"/>
-
 
                 </RelativeLayout>
 
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
-
 
         <android.support.v7.widget.CardView
             android:id="@+id/updateView"
