--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -75,7 +75,7 @@
         <item>dvdandroid</item>
         <item>hjmodi</item>
         <item>rovo89</item>
-        <item>rovo89 (old)</item>
+        <item>@string/rovo_89_old_icon</item>
         <item>staol</item>
     </string-array>
 
