--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -28,6 +28,14 @@
             android:summary="%s"
             android:title="@string/settings_release_type"/>
 
+        <de.robv.android.xposed.installer.widget.ListPreferenceSummaryFix
+            android:defaultValue="3"
+            android:entries="@array/update_text"
+            android:entryValues="@array/update_values"
+            android:key="update_service_interval"
+            android:summary="%s"
+            android:title="@string/update_interval"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
