--- a/app/src/main/res/layout/activity_download_details.xml
+++ b/app/src/main/res/layout/activity_download_details.xml
@@ -6,8 +6,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="@dimen/toolbar_elevation">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -29,6 +28,13 @@
             app:tabTextAppearance="@style/TextAppearance.Design.Tab"/>
 
     </android.support.design.widget.AppBarLayout>
+
+    <View
+        android:id="@+id/fake_elevation"
+        android:layout_marginTop="104dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_elevation"
+        android:background="@drawable/toolbar_shadow"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/download_pager"
