--- a/app/src/main/res/layout/status_installer.xml
+++ b/app/src/main/res/layout/status_installer.xml
@@ -33,8 +33,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dip"
-            android:layout_marginRight="8dip"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
             android:layout_marginTop="6dp"
             android:orientation="vertical">
 
@@ -75,25 +75,49 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 app:cardBackgroundColor="?attr/list_download_item_color"
                 app:cardUseCompatPadding="true">
 
-                <TextView
-                    android:padding="6dp"
-                    android:id="@+id/framework_install_errors"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/warning"/>
+                    android:orientation="vertical">
+
+                    <FrameLayout
+                        android:id="@+id/status_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:foregroundGravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/status_icon"
+                            android:layout_width="84dp"
+                            android:layout_height="84dp"
+                            android:layout_gravity="center"/>
+
+                    </FrameLayout>
+
+                    <TextView
+                        android:id="@+id/framework_install_errors"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:padding="6dp"
+                        android:textColor="@color/warning"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 app:cardBackgroundColor="?attr/list_download_item_color"
                 app:cardElevation="2dp"
@@ -107,10 +131,10 @@
 
                     <ImageView
                         android:id="@+id/errorIcon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_centerHorizontal="true"
-                        android:src="@drawable/ic_alert_warning"
+                        android:src="@drawable/ic_no_connection"
                         android:visibility="gone"/>
 
                     <TextView
@@ -119,6 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/errorIcon"
                         android:layout_centerHorizontal="true"
+                        android:gravity="center"
                         android:text="@string/loadingError"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:visibility="gone"/>
