--- a/app/src/main/res/menu/menu_installer.xml
+++ b/app/src/main/res/menu/menu_installer.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/help"
-        android:icon="@drawable/ic_nav_support"
-        android:title="@string/help"
-        app:showAsAction="always|withText"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group>
 
